# cpp_ac_trainer

./: CMakeLists.txt  ac_trainer.data  imgui.ini  keymanager.cpp  main.cpp  memory.cpp  memory.h  offsets.h  player.cpp  player.h  run.bat  utils.cpp  utils.h
src/: guimanager.cpp  guimanager.h  keymanager.cpp  keymanager.h  main.cpp  memory.h  settingsmanager.cpp  settingsmanager.h  trainer.cpp  utils.cpp
